adding one comment to conversion function

--- a/convert_to_koinly_format.ipynb
+++ b/convert_to_koinly_format.ipynb
@@ -345,6 +345,7 @@
     "                   'Received_Amount_Mint', 'Received_Currency_Mint'])\n",
     "    # Changing all column name underscores to spaces\n",
     "    .rename(columns=lambda c: c.replace('_', ' '))\n",
+    "    # Changing relevant column types\n",
     "    .astype({col:'category' for col in ['Label', 'token symbol', 'Net Worth Currency']})\n",
     "    .astype({'Date':'datetime64'}))"
    ]
