--- a/convert_to_koinly_format.ipynb
+++ b/convert_to_koinly_format.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "Name: txn_type, dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "4             NaN         NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,6 +269,9 @@
     "            series = series.combine_first(other=df_[columns[0]])\n",
     "            del columns[0]\n",
     "        return series\n",
+    "    \n",
+    "    token_ids = immutable.token_id.dropna().drop_duplicates()\n",
+    "    id_map = dict(zip(token_ids, token_ids.index+1000))\n",
     "\n",
     "    return (df_\n",
     "    .assign(Date=lambda df_:\n",
@@ -325,12 +328,24 @@
     "        'Sent_Currency_Buy', 'Sent_Currency_Transfer', 'Sent_Currency_Sell']))\n",
     "    .assign(Received_Amount=lambda df_:\n",
     "        combine_columns(df_, columns=[\n",
-    "        'Received_Amount_Sell', 'Received_Amount_Transfer', 'Received_Amount_Deposit', \n",
-    "        'Received_Amount_Mint']))\n",
+    "        'Received_Amount_Buy', 'Received_Amount_Sell', 'Received_Amount_Transfer',\n",
+    "        'Received_Amount_Deposit', 'Received_Amount_Mint']))\n",
     "    .assign(Received_Currency=lambda df_:\n",
     "        combine_columns(df_, columns=[\n",
-    "        'Received_Currency_Sell', 'Received_Currency_Transfer', 'Received_Currency_Deposit',\n",
-    "        'Received_Currency_Mint']))\n",
+    "        'Received_Currency_Buy', 'Received_Currency_Sell', 'Received_Currency_Transfer',\n",
+    "        'Received_Currency_Deposit', 'Received_Currency_Mint']))\n",
+    "    # Tweaking Received Currency and Sent Currency so that nfts will be accepted\n",
+    "    # by koinly conventions\n",
+    "    .assign(Received_Currency=lambda df_:\n",
+    "        df_['Received_Currency'].where(df_.Received_Currency.isin(['ETH', 'GODS', 'IMX', np.nan]),\n",
+    "            other=df_['Received_Currency']\n",
+    "            .map(id_map)\n",
+    "            .apply(func=lambda x: 'NFT'+str(x)[:-2])))\n",
+    "    .assign(Sent_Currency=lambda df_:\n",
+    "        df_['Sent_Currency'].where(df_['Sent_Currency'].isin(['ETH', 'GODS', 'IMX', np.nan]),\n",
+    "            other=df_['Sent_Currency']\n",
+    "            .map(id_map)\n",
+    "            .apply(func=lambda x: 'NFT'+str(x)[:-2])))\n",
     "    # Creating Net_Worth_Currency column\n",
     "    .assign(Net_Worth_Currency = 'USD')\n",
     "    # renaming columns that need no processing\n",
@@ -352,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,323 +376,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "koinly_accepted = df.loc[\n",
-    "    ((df['Label']=='transfer')&\n",
-    "     (~df['token symbol'].isna()))|\n",
-    "    (df['Label']=='deposit')].copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>TxHash</th>\n",
-       "      <th>Label</th>\n",
-       "      <th>from address</th>\n",
-       "      <th>to address</th>\n",
-       "      <th>token name</th>\n",
-       "      <th>token symbol</th>\n",
-       "      <th>token quantity</th>\n",
-       "      <th>Net Worth Amount</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Sent Amount</th>\n",
-       "      <th>Sent Currency</th>\n",
-       "      <th>Received Amount</th>\n",
-       "      <th>Received Currency</th>\n",
-       "      <th>Net Worth Currency</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>35</th>\n",
-       "      <td>147327526</td>\n",
-       "      <td>deposit</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ETH</td>\n",
-       "      <td>0.025000</td>\n",
-       "      <td>39.778750</td>\n",
-       "      <td>2022-11-01 05:22:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.025000</td>\n",
-       "      <td>ETH</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41</th>\n",
-       "      <td>147481529</td>\n",
-       "      <td>deposit</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ETH</td>\n",
-       "      <td>0.006041</td>\n",
-       "      <td>9.504507</td>\n",
-       "      <td>2022-11-01 16:02:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.006041</td>\n",
-       "      <td>ETH</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>43</th>\n",
-       "      <td>147512786</td>\n",
-       "      <td>deposit</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ETH</td>\n",
-       "      <td>0.030000</td>\n",
-       "      <td>47.378700</td>\n",
-       "      <td>2022-11-01 18:22:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.030000</td>\n",
-       "      <td>ETH</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45</th>\n",
-       "      <td>148021987</td>\n",
-       "      <td>transfer</td>\n",
-       "      <td>0x945206be1f681ae6a6c8e45824e7bb633f3a1bfa</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>IMX</td>\n",
-       "      <td>0.612674</td>\n",
-       "      <td>0.360794</td>\n",
-       "      <td>2022-11-03 01:26:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.612674</td>\n",
-       "      <td>IMX</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>83</th>\n",
-       "      <td>156454628</td>\n",
-       "      <td>deposit</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ETH</td>\n",
-       "      <td>0.008181</td>\n",
-       "      <td>9.689130</td>\n",
-       "      <td>2022-11-24 01:31:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.008181</td>\n",
-       "      <td>ETH</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>293</th>\n",
-       "      <td>184074574</td>\n",
-       "      <td>transfer</td>\n",
-       "      <td>0x8c8df499ad3b6f1aca2df21e70ace6dc4e0839a3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>GODS</td>\n",
-       "      <td>0.276447</td>\n",
-       "      <td>0.083710</td>\n",
-       "      <td>2023-02-05 03:31:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.276447</td>\n",
-       "      <td>GODS</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>294</th>\n",
-       "      <td>184074575</td>\n",
-       "      <td>transfer</td>\n",
-       "      <td>0x8c8df499ad3b6f1aca2df21e70ace6dc4e0839a3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>GODS</td>\n",
-       "      <td>0.259370</td>\n",
-       "      <td>0.078539</td>\n",
-       "      <td>2023-02-05 03:31:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.259370</td>\n",
-       "      <td>GODS</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>295</th>\n",
-       "      <td>185514272</td>\n",
-       "      <td>transfer</td>\n",
-       "      <td>0x8c8df499ad3b6f1aca2df21e70ace6dc4e0839a3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>GODS</td>\n",
-       "      <td>0.293501</td>\n",
-       "      <td>0.079428</td>\n",
-       "      <td>2023-02-10 15:59:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.293501</td>\n",
-       "      <td>GODS</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>296</th>\n",
-       "      <td>185514274</td>\n",
-       "      <td>transfer</td>\n",
-       "      <td>0x8c8df499ad3b6f1aca2df21e70ace6dc4e0839a3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>GODS</td>\n",
-       "      <td>1.179409</td>\n",
-       "      <td>0.319176</td>\n",
-       "      <td>2023-02-10 15:59:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.179409</td>\n",
-       "      <td>GODS</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>297</th>\n",
-       "      <td>185514275</td>\n",
-       "      <td>transfer</td>\n",
-       "      <td>0x8c8df499ad3b6f1aca2df21e70ace6dc4e0839a3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>GODS</td>\n",
-       "      <td>1.124144</td>\n",
-       "      <td>0.304220</td>\n",
-       "      <td>2023-02-10 15:59:00</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.124144</td>\n",
-       "      <td>GODS</td>\n",
-       "      <td>USD</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>129 rows × 14 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        TxHash     Label                                from address  \\\n",
-       "35   147327526   deposit                                         NaN   \n",
-       "41   147481529   deposit                                         NaN   \n",
-       "43   147512786   deposit                                         NaN   \n",
-       "45   148021987  transfer  0x945206be1f681ae6a6c8e45824e7bb633f3a1bfa   \n",
-       "83   156454628   deposit                                         NaN   \n",
-       "..         ...       ...                                         ...   \n",
-       "293  184074574  transfer  0x8c8df499ad3b6f1aca2df21e70ace6dc4e0839a3   \n",
-       "294  184074575  transfer  0x8c8df499ad3b6f1aca2df21e70ace6dc4e0839a3   \n",
-       "295  185514272  transfer  0x8c8df499ad3b6f1aca2df21e70ace6dc4e0839a3   \n",
-       "296  185514274  transfer  0x8c8df499ad3b6f1aca2df21e70ace6dc4e0839a3   \n",
-       "297  185514275  transfer  0x8c8df499ad3b6f1aca2df21e70ace6dc4e0839a3   \n",
-       "\n",
-       "    to address token name token symbol  token quantity  Net Worth Amount  \\\n",
-       "35         NaN        NaN          ETH        0.025000         39.778750   \n",
-       "41         NaN        NaN          ETH        0.006041          9.504507   \n",
-       "43         NaN        NaN          ETH        0.030000         47.378700   \n",
-       "45         NaN        NaN          IMX        0.612674          0.360794   \n",
-       "83         NaN        NaN          ETH        0.008181          9.689130   \n",
-       "..         ...        ...          ...             ...               ...   \n",
-       "293        NaN        NaN         GODS        0.276447          0.083710   \n",
-       "294        NaN        NaN         GODS        0.259370          0.078539   \n",
-       "295        NaN        NaN         GODS        0.293501          0.079428   \n",
-       "296        NaN        NaN         GODS        1.179409          0.319176   \n",
-       "297        NaN        NaN         GODS        1.124144          0.304220   \n",
-       "\n",
-       "                   Date  Sent Amount Sent Currency  Received Amount  \\\n",
-       "35  2022-11-01 05:22:00          NaN           NaN         0.025000   \n",
-       "41  2022-11-01 16:02:00          NaN           NaN         0.006041   \n",
-       "43  2022-11-01 18:22:00          NaN           NaN         0.030000   \n",
-       "45  2022-11-03 01:26:00          NaN           NaN         0.612674   \n",
-       "83  2022-11-24 01:31:00          NaN           NaN         0.008181   \n",
-       "..                  ...          ...           ...              ...   \n",
-       "293 2023-02-05 03:31:00          NaN           NaN         0.276447   \n",
-       "294 2023-02-05 03:31:00          NaN           NaN         0.259370   \n",
-       "295 2023-02-10 15:59:00          NaN           NaN         0.293501   \n",
-       "296 2023-02-10 15:59:00          NaN           NaN         1.179409   \n",
-       "297 2023-02-10 15:59:00          NaN           NaN         1.124144   \n",
-       "\n",
-       "    Received Currency Net Worth Currency  \n",
-       "35                ETH                USD  \n",
-       "41                ETH                USD  \n",
-       "43                ETH                USD  \n",
-       "45                IMX                USD  \n",
-       "83                ETH                USD  \n",
-       "..                ...                ...  \n",
-       "293              GODS                USD  \n",
-       "294              GODS                USD  \n",
-       "295              GODS                USD  \n",
-       "296              GODS                USD  \n",
-       "297              GODS                USD  \n",
-       "\n",
-       "[129 rows x 14 columns]"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "koinly_accepted"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "koinly_accepted.to_csv('immutable.csv')"
+    "df.to_csv('immutable.csv')"
    ]
   }
  ],
