tweaking detail to fix 10 broken transactions

--- a/convert_to_koinly_format.ipynb
+++ b/convert_to_koinly_format.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "Name: txn_type, dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
        "4             NaN         NaN  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
     "    \n",
     "    token_ids = immutable.token_id.dropna().drop_duplicates()\n",
     "    id_map = dict(zip(token_ids, token_ids.index+1000))\n",
-    "\n",
+    "    \n",
     "    return (df_\n",
     "    .assign(Date=lambda df_:\n",
     "        pd.to_datetime(df_.txn_time).dt.strftime('%Y-%m-%d %H:%M %Z'))\n",
@@ -307,6 +307,17 @@
     "    .assign(Sent_Currency_Transfer=lambda df_:\n",
     "        df_.token_symbol.where(\n",
     "            (df_.txn_type==\"transfer\")&(~df_.to_address.isna())))\n",
+    "    .assign(Sent_Amount_Transfer_Nft=lambda df_:\n",
+    "        np.where(\n",
+    "            ((df_.txn_type=='transfer')&\n",
+    "             (~df_.to_address.isna())&\n",
+    "             (~df_.token_id.isna())),\n",
+    "            1, np.nan))\n",
+    "    .assign(Sent_Currency_Transfer_Nft=lambda df_:\n",
+    "        df_.token_id.where(\n",
+    "            ((df_.txn_type=='transfer')&\n",
+    "             (~df_.to_address.isna())&\n",
+    "             (~df_.token_id.isna()))))\n",
     "    #   Next, dealing with transfers received by the wallet\n",
     "    .assign(Received_Amount_Transfer=lambda df_:\n",
     "        df_.token_quantity.where(\n",
@@ -314,6 +325,17 @@
     "    .assign(Received_Currency_Transfer=lambda df_:\n",
     "        df_.token_symbol.where(\n",
     "            (df_.txn_type==\"transfer\")&(~df_.from_address.isna())))\n",
+    "    .assign(Received_Amount_Transfer_Nft=lambda df_:\n",
+    "        np.where(\n",
+    "            ((df_.txn_type=='transfer')&\n",
+    "             (~df_.from_address.isna())&\n",
+    "             (df_.token_id.isna())),\n",
+    "            1, np.nan))\n",
+    "    .assign(Received_Currency_Transfer_Nft=lambda df_:\n",
+    "        df_.token_id.where(\n",
+    "            ((df_.txn_type=='transfer')&\n",
+    "             (~df_.from_address.isna())&\n",
+    "             (~df_.token_id.isna()))))\n",
     "    # dealing with deposit transaction types\n",
     "    .assign(Received_Amount_Deposit=lambda df_:\n",
     "        df_.token_quantity.where(df_.txn_type==\"deposit\",np.nan))\n",
@@ -322,22 +344,24 @@
     "    # Merging together applicable columns\n",
     "    .assign(Sent_Amount=lambda df_:\n",
     "        combine_columns(df_, columns=[\n",
-    "        'Sent_Amount_Buy', 'Sent_Amount_Transfer', 'Sent_Amount_Sell']))\n",
+    "        'Sent_Amount_Buy', 'Sent_Amount_Transfer',\n",
+    "        'Sent_Amount_Transfer_Nft', 'Sent_Amount_Sell']))\n",
     "    .assign(Sent_Currency=lambda df_:\n",
     "        combine_columns(df_, columns=[\n",
-    "        'Sent_Currency_Buy', 'Sent_Currency_Transfer', 'Sent_Currency_Sell']))\n",
+    "        'Sent_Currency_Buy', 'Sent_Currency_Transfer',\n",
+    "        'Sent_Currency_Transfer_Nft', 'Sent_Currency_Sell']))\n",
     "    .assign(Received_Amount=lambda df_:\n",
     "        combine_columns(df_, columns=[\n",
     "        'Received_Amount_Buy', 'Received_Amount_Sell', 'Received_Amount_Transfer',\n",
-    "        'Received_Amount_Deposit', 'Received_Amount_Mint']))\n",
+    "        'Received_Amount_Transfer_Nft', 'Received_Amount_Deposit', 'Received_Amount_Mint']))\n",
     "    .assign(Received_Currency=lambda df_:\n",
     "        combine_columns(df_, columns=[\n",
     "        'Received_Currency_Buy', 'Received_Currency_Sell', 'Received_Currency_Transfer',\n",
-    "        'Received_Currency_Deposit', 'Received_Currency_Mint']))\n",
+    "        'Received_Currency_Transfer_Nft', 'Received_Currency_Deposit', 'Received_Currency_Mint']))\n",
     "    # Tweaking Received Currency and Sent Currency so that nfts will be accepted\n",
     "    # by koinly conventions\n",
     "    .assign(Received_Currency=lambda df_:\n",
-    "        df_['Received_Currency'].where(df_.Received_Currency.isin(['ETH', 'GODS', 'IMX', np.nan]),\n",
+    "        df_['Received_Currency'].where(df_['Received_Currency'].isin(['ETH', 'GODS', 'IMX', np.nan]),\n",
     "            other=df_['Received_Currency']\n",
     "            .map(id_map)\n",
     "            .apply(func=lambda x: 'NFT'+str(x)[:-2])))\n",
@@ -357,7 +381,9 @@
     "                   'Received_Currency_Transfer', 'Sent_Amount_Transfer', 'Sent_Currency_Transfer',\n",
     "                   'Received_Amount_Deposit', 'Received_Currency_Deposit', 'Received_Amount_Buy',\n",
     "                   'Received_Currency_Buy', 'Sent_Amount_Sell', 'Sent_Currency_Sell',\n",
-    "                   'Received_Amount_Mint', 'Received_Currency_Mint'])\n",
+    "                   'Received_Amount_Mint', 'Received_Currency_Mint', 'Sent_Amount_Transfer_Nft',\n",
+    "                   'Sent_Currency_Transfer_Nft', 'Received_Amount_Transfer_Nft',\n",
+    "                   'Received_Currency_Transfer_Nft'])\n",
     "    # Changing all column name underscores to spaces\n",
     "    .rename(columns=lambda c: c.replace('_', ' '))\n",
     "    # Changing relevant column types\n",
@@ -367,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
